5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1573_1331.log
== TEST (2019-03-27 15:24:19) 
-- CODE:
print(int(50/3))
print(mod(50/3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(mod(50/3))
NameError: name 'mod' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:24:42) 
-- CODE:
print(int(50/3))
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:24:54) 
-- CODE:
print(int(50/3))
print(50%3)
-- EXECUTION TIME:
0.188733
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
